--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -241,11 +241,70 @@ body {
 
 
 .location-mark {
-    stroke: #3aff3a;
-    stroke-width: 2.5;
-    fill : #3aff3a;
+    
+    z-index: 99;
+    fill:yellowgreen;
 }
-
+.dropbtn {
+    background-color: #555;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    bottom: 23px;
+    right: 28px;
+    width: 280px;
+  }
+  .dropbtn:hover{
+     background-color:  rgba(13, 112, 116, 0.527);
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    
+    position: relative;
+    display: inline-block;
+    background-color: rgba(0, 0, 5, 0.6);
+    border-radius: 0.5rem/0.5rem;
+    display: table;
+    margin-top: 1rem;
+    padding: 0 1rem 0 1rem;
+     pointer-events: all;
+     /* transform: translate(624%,-100%); */
+    
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    top: 13px;
+    left: 740px;
+   
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 2;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 6px 6px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  /* .dropdown-content a:hover {background-color: #ddd;} */
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #305c31;}
 /**************************************************************************************************
  * About Page
  **************************************************************************************************/
@@ -310,32 +369,38 @@ body {
 }
 
 
-table, th, td,.abc {
+.abc {
     position: relative;
     z-index: 2;   
     padding: 1px;
 }
 
-table {
-    border:1px solid #ffffff;
+table,tr,td {
+    border:.1px solid #ffffff;
     border-collapse: collapse;
-    padding: 2.5 rem;
+    padding: .5 rem;
+    text-decoration: rgb(39, 1, 39);
 }
-
+tr,td{
+    padding: 1px 1px 1px 1px;
+    border-radius: 4px;
+    border: .5px solid rgba(39, 27, 4, 0.856);
+}
+/* 
 th, td, tr{
-    background-color: #424242;
+    background-color: #078292c0;
     padding: 0.5rem;
     font-size: large;
-} 
+}  */
 
 .container{
     padding: 2.5rem;
-    width:20%;
+    width:15%;
 }
 
 
 .btnContainer{
-    width:100%;
+    width:150%;
     margin-top: 1rem;
     
 }
@@ -353,9 +418,164 @@ th, td, tr{
 }
 
 .location-mark-1{
-    stroke: #e1e431;
-    stroke-width: 2.5;
-    fill:#e1e431;
+    fill: #d9f731;
+  
+    z-index: 99;
+    
 }
 
+
+/* The popup form - hidden by default */
+
+
+/* Add styles to the form container */
+
+
+/* When the inputs get focus, do something */
+
+.overlay1 {
+    position: absolute;
+    top: 133px;
+    left: 8px;
+    width: auto;
+    font-size: 32px;
+} 
+#change{
+    border-radius: 5px;
+}
+#change:hover{
+    background-color: #f1c43b;
+}
+.overlay::after, .overlay1::before {
+    position: absolute;
+    top: -3px;
+    bottom: -3px;
+    right: 0;
+    content: '';
+}
+.name:hover{
+    text-decoration: underline;
+}
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 4; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    right: -110px;
+    top: 30px;
+    border-radius: 3px;
+    width: 34%; /* Full width */
+    height: 42%; /* Full height */
+    overflow:visible ; /* Enable scroll if needed */
+    background-color: rgba(0, 0, 0, 0); /* Fallback color */
+    background-color: rgba(37, 4, 39, 0); /* Black w/ opacity */
+
+    font-size: large;
     
+   
+    padding: 0;
+    
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.6s;
+    animation-name: animatetop;
+    animation-duration: 0.6s;
+    padding: 0.5rem;
+    font-size: large
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    height: 100%;
+    width: 100%;
+  }
+  
+  /* Add Animation */
+  @-webkit-keyframes animatetop {
+    from {top:300px; opacity:0} 
+    to {top:0; opacity:1}
+  }
+  
+  @keyframes animatetop {
+    from {top:300px; opacity:0}
+    to {top:0; opacity:1}
+  }
+  
+  /* The Close Button */
+  .close {
+    color: white;
+    float: none;
+    font-size: 18px;
+    font-weight: bold;
+    z-index: 4;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .modal-header {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+  }
+  
+  .modal-body {padding: 2px 16px;}
+  
+  .modal-footer {
+    padding: 2px 6px;
+    background-color: #5cb85c;
+    color: white;
+  }
+  #mybtn{
+      z-index: 99;
+  }
+  #overlay1{
+    z-index: 3;
+    position: absolute;
+    display: flow-root;
+    top: 165px;
+    font-size: 35px;
+
+  }
+  .add{
+      color: azure;
+  }
+  .add:hover{
+      text-decoration: underline;
+  }
+  
+  #add1{
+      color: beige;
+
+  }
+  #add1:hover{
+      color: coral;
+  }
+
+
+  .cell1{
+    border: aliceblue;
+    background-color: #000005;
+    width: 70px;
+    font-style: oblique;
+    color: #c3f0f0bf;
+
+}
+.cell2{
+    background-color: #000005;
+    width: 140px;
+    font-style: oblique;
+    color: #c3f0f0bf;
+}
+
+.cell3{
+    background-color: #000005;
+    width: 70px;
+    font-style: oblique;
+    color: #c3f0f0bf;
+}
+
+
